@@ -1,5 +1,9 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/secur32/lsa.c: Add @implemented and @unimplemented to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* drivers/storage/scsiport/scsiport.c: Add @implemented and
 	@unimplemented to APIs.
 
